2012-05-15  James Robinson  <jamesr@chromium.org>

        [chromium] Move createOffscreenGraphicsContext3D() from WebKitPlatformSupport to Platform
        https://bugs.webkit.org/show_bug.cgi?id=86524

        Reviewed by Adam Barth.

        Updates TestWebPlugin to use the Platform headers and updates the build dependencies so it can.

        * DumpRenderTree/DumpRenderTree.gyp/DumpRenderTree.gyp:
        * DumpRenderTree/chromium/TestWebPlugin.cpp:
        (TestWebPlugin::initialize):

2012-05-15  Jessie Berlin  <jberlin@apple.com>

        WKContextSetCacheModel(contextref, kWKCacheModelDocumentViewer) doesn't prevent pages from
        going into the PageCache.
        https://bugs.webkit.org/show_bug.cgi?id=85891

        Reviewed by Brady Eidson.

        Set the cache model in DOMWindowExtensionNoCache so that the page cache is not used. This is
        better than using pages with unload handlers because we may find a way to make pages with
        unload handlers cacheable in the future.

        * TestWebKitAPI/TestWebKitAPI.xcodeproj/project.pbxproj:
        Remove simple-iframe-unload.html and simple-unload.html, since they are no longer used.

        * TestWebKitAPI/Tests/WebKit2/DOMWindowExtensionNoCache.cpp:
        (TestWebKitAPI::TEST):
        Set the cache model to kWKCacheModelDocumentViewer.

        * TestWebKitAPI/Tests/WebKit2/simple-iframe-unload.html: Removed.
        * TestWebKitAPI/Tests/WebKit2/simple-unload.html: Removed.

2012-05-15  Kenneth Rohde Christiansen  <kenneth@webkit.org>

        [Qt] Add infra for testing double-tap to zoom functionality etc
        https://bugs.webkit.org/show_bug.cgi?id=86474

        Reviewed by Simon Hausmann.

        The WebViewportInfo class was renamed to QWebKitTest in preparation
        of becoming a separate module. Adapt the use API.

        * MiniBrowser/qt/qml/BrowserWindow.qml:
        * MiniBrowser/qt/qml/ViewportInfoItem.qml:

2012-05-15  Csaba Osztrogonác  <ossy@webkit.org>
